syntax = "proto3";

package api;

message SyncRequest {
    bytes graph = 1;
}
